2007-08-03  Jb Evain  <jbevain@novell.com>

	* Dns.cs: remove async methods for the 2.1 profile.

2007-07-17  Rodrigo Kumpera  <rkumpera@novell.com>

	* HttpListenerRequest.cs: Support for Cookie decoding.
	* HttpListenerResponse.cs: Support for encoding cookies on the response sent to the client
	* Cookie.cs: new internal method to encode the Cookie in a proper form to sent to clients

2007-07-14 Gonzalo Paniagua Javier <gonzalo.mono@gmail.com>

	* WebConnectionStream.cs: implement the CanTimeout for 2.0. Fixes
	bug #81504.

2007-07-12  Geoff Norton  <gnorton@customerdna.com>

	* HttpListenerContext.cs: 
	* HttpListener.cs: Handle HttpListener AuthenticationSchemes
	Only Basic authentication is included for now.

2007-06-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* NetworkAccess.cs: Only mark as flags enum on 2.0.

2007-06-21  Dick Porter  <dick@ximian.com>

	* AuthenticationManager.cs: 
	* FtpWebRequest.cs: 
	* Cookie.cs: 
	* ServicePoint.cs: 
	* WebClient.cs: 
	* Authorization.cs: 
	* FileWebRequest.cs: 
	* HttpWebRequest.cs: 
	* WebResponse.cs: 
	* ServicePointManager.cs: 
	* HttpWebResponse.cs: Throw NotImplementedException indirectly, to
	reduce noise in Moma reports.

2007-06-20  Atsushi Enomoto  <atsushi@ximian.com>

	* ServicePointManager.cs : (bootstrap) build fix.

2007-06-19  Dick Porter  <dick@ximian.com>

	* AuthenticationManager.cs: 
	* IWebProxyScript.cs: 
	* Authorization.cs: 
	* Cookie.cs: 
	* CookieException.cs: 
	* CredentialCache.cs: 
	* FileWebRequest.cs: 
	* WebRequest.cs: 
	* FileWebResponse.cs: 
	* WebResponse.cs: 
	* FtpWebRequest.cs: 
	* HttpWebRequest.cs: 
	* DecompressionMethods.cs: 
	* HttpWebResponse.cs: 
	* ProtocolViolationException.cs: 
	* ServicePoint.cs: 
	* ServicePointManager.cs: 
	* WebClient.cs: 
	* WebException.cs: 
	* WebHeaderCollection.cs: 
	* WebProxy.cs: 
	* WebExceptionStatus.cs: 2.0 profile updates

2007-05-18  Gert Driesen  <drieseng@users.sourceforge.net>
